deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-deployment
  namespace: notes-app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app-ns
  template:
    metadata:
      labels:
        app: notes-app-ns
    spec:
      imagePullSecrets:
        - name: notescred
      containers:
      - name: notes-app
        image: shaikansar/kube_practice:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
        volumeMounts:
          - mountPath: "/mnt/data"
            name: notes-app-pvc
      volumes:
        - name: motes-app
          persistentVolumeClaim:
            claimName: notes-app-pvc
