nginx-depolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  Namespace: notes-app-ns
spec:
  replica: 2
  selector:
    matchLabels:
      app: notes-app-ns
  template:
    metadata:
      labels:
        app: notes-app-ns
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
