nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: notes-app-ns
spec:
  selector:
    app: notes-app-ns
  ports:
  - port: 80
    targetPort: 80
