service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: notes-app-ns
spec:
  selector:
    app: notes-app-ns
  ports:
  - port: 8000
    targetPort: 8000
