ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: nginx-service
            port:
              number: 80
      - pathType: Prefix
        path: /notes
        backend:
          service:
            name: notes-app-service
            port:
              number: 8000
